8 Dec 2017
change: most buttons smaller
fix: pm search
add: missing full text indexes
add: select/send message to any user
update: pm pages

6 Dec 2017
fix: remove author from newsrss.php
fix: check for defined
run: "INSERT INTO staffpanel VALUES (75, 'Upgrade Database', 'staffpanel.php?tool=upgrade_database', 'upgrade database', 'other', 6, 1, 1512555394, 0);"
add: admin/database_updates.php will show all queries that need run or things that need to be added to config.php

2 Dec 2017
replace: more mysqli queries with pdo
general code cleanup

1 Dec 2017
remove: duplicate caches Myuser_ and user

26 Nov 2017
remove: hardcoded user:pass
add: pdo class, just beginning to move from mysqli to pdo
fix: tooltipster position
update: browse.php search function
update: details.php comments
update: cache->get
update: details.php
remove: new up redis

25 Nov 2017
fix: index page poll
fix: index page latest torrents spacing
fix: index page torrents scroller when empty
fix: index page news block spacing
fix: global messages positioning
add: caching environment 'Scrapbook'
remove: redis requirement
remove: memcached and php-memcache requirement

14 Nov 2017
update: GeoIP files 
fix: iphistory.php view ip
fix: userdetails.php view ip
add: transition to notification buttons
fix: themeChanger active border
fix: lottery config
fix: userdetails.php tabs and anchors
update: faq
fix: scroll to anchor
merge: torrents-today.php into browse.php
fix: userdetails.php tabcontrol

12 Nov 2017
add: user stats and gifts in AJAX Chat
add: torrent search by uploader
add: port_check.php to assist in opening ports
add: hnrs.php so users can keep up with them
update: AJAX Chat channels, restrict messages origins
update: newsrss.php can accept arrays for feeds

11 Nov 2017
update: page uniformity
update: snatches.php, peerlist.php, viewnfo.php, report.php
update: global messages
add: doc blocks(a start)
update: filelist.php
update: torrents-today.php
update: notifications can accept arrays