@@ -1,3 +1,6 @@
+9 Dec 2017
+fix: pm search delete
+
 8 Dec 2017
 change: most buttons smaller
 fix: pm search
